--- a/ansible/roles/secrets/tasks/deploy.yml
+++ b/ansible/roles/secrets/tasks/deploy.yml
@@ -2,11 +2,21 @@
 # secrets-api用のデプロイタスク（ファイルコピーはmain.ymlで実施済み）
 
 - name: Deploy secrets-api application code from GitHub
-  ansible.builtin.git:
-    repo: "https://{{ github_token_secrets }}@github.com/{{ github_owner }}/{{ service_repo_names.secrets }}.git"
-    dest: "{{ deployment_paths.src_dir }}/{{ service_repo_names.secrets }}"
-    version: "{{ secrets_ref | mandatory('secrets_ref must be provided') }}"
-    force: yes
+  # git -c によるインメモリ認証設定を使用。.git/config へのトークン書き込みを防ぐ
+  ansible.builtin.shell: |
+    set -e
+    DEST="{{ deployment_paths.src_dir }}/{{ service_repo_names.secrets }}"
+    REPO_URL="https://github.com/{{ github_owner }}/{{ service_repo_names.secrets }}.git"
+    TOKEN_REWRITE="url.https://x-access-token:{{ github_token_secrets }}@github.com/.insteadOf=https://github.com/"
+
+    if [ -d "${DEST}/.git" ]; then
+      git -C "${DEST}" -c "${TOKEN_REWRITE}" fetch --depth 1 origin "{{ secrets_ref | mandatory('secrets_ref must be provided') }}"
+      git -C "${DEST}" reset --hard FETCH_HEAD
+    else
+      git -c "${TOKEN_REWRITE}" clone --depth 1 --branch "{{ secrets_ref | mandatory('secrets_ref must be provided') }}" \
+        "${REPO_URL}" "${DEST}"
+    fi
+  no_log: true
   become: yes
   become_user: "{{ app_user }}"
   tags: [secrets, deploy-secrets, deploy-all]
