デプロイ時にコンテナ再起動を行ってなかったため行うようにした & コンテナ操作関連のタスクを作成

--- a/ansible/playbook_deploy_secrets.yml
+++ b/ansible/playbook_deploy_secrets.yml
@@ -22,3 +22,12 @@
         - docker
         - deploy-compose
         - restart-secrets
+
+    - name: Update secrets-api container (pull and recreate)
+      ansible.builtin.include_role:
+        name: docker
+        tasks_from: container/update/update_secrets_image
+      tags:
+        - docker
+        - update-secrets-image
+        - restart-secrets
