--- a/ansible/roles/docker/tasks/container/restart/restart_backend.yml
+++ b/ansible/roles/docker/tasks/container/restart/restart_backend.yml
@@ -3,7 +3,7 @@
 
 - name: Restart backend container
   ansible.builtin.shell: |
-    cd {{ deployment_dir }}
+    cd {{ deployment_paths.deployment_dir }}
     docker compose restart backend
   tags:
     - docker
