--- a/ansible/roles/docker/tasks/container/start/start_secrets.yml
+++ b/ansible/roles/docker/tasks/container/start/start_secrets.yml
@@ -1,11 +1,11 @@
 ---
-# バックエンドコンテナの起動
+# Secrets API コンテナの起動
 # イメージが存在しない場合はプルを試みます
 
-- name: Start backend container
+- name: Start secrets-api container
   ansible.builtin.shell: |
     cd {{ deployment_paths.deployment_dir }}
-    docker compose up -d backend
+    docker compose up -d secrets-api
   become: no
   tags:
     - docker
