--- a/ansible/roles/docker/tasks/container/stop/stop_secrets.yml
+++ b/ansible/roles/docker/tasks/container/stop/stop_secrets.yml
@@ -1,8 +1,8 @@
 ---
-- name: Stop backend container
+- name: Stop secrets-api container
   ansible.builtin.shell: |
     cd {{ deployment_paths.deployment_dir }}
-    docker compose stop postgres
+    docker compose stop secrets-api
   tags:
     - docker
-    - stop-postgres
+    - stop-secrets
