--- a/ansible/roles/docker/tasks/container/update/update_secrets_image.yml
+++ b/ansible/roles/docker/tasks/container/update/update_secrets_image.yml
@@ -1,13 +1,13 @@
 ---
-# バックエンドコンテナのイメージを更新し、再作成・再起動する
+# Secrets API コンテナのイメージを更新し、再作成・再起動する
 
-- name: Pull latest Backend image and recreate container
+- name: Pull latest Secrets API image and recreate container
   community.docker.docker_compose_v2:
     project_src: "{{ deployment_paths.deployment_dir }}"
     files:
       - docker-compose.yml
     services:
-      - "backend"
+      - "secrets-api"
     pull: always
     recreate: always
   environment:
@@ -15,4 +15,5 @@
   become: no
   tags:
     - docker
-    - update-backend-image
+    - update-secrets-image
+  
